tools/tests/errors/repeat_too_large.ki
discard "x" * 100000000000
